kubernetes/hasura/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hasura
  name: hasura
spec:
  type: NodePort
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
      nodePort: 31887
  selector:
    app: hasura
status:
  loadBalancer: {}
